# project-persiancat

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  CREDITS  MAINTAINERS  README.md  main.c  persiancat
MANUAL/: Contributing.odt
assets/: blob_for_COPYING_file.sh
functions/html-rendering/: html-rendering.cpp  html-rendering.h
persiancat-browser-CLI/: CMakeLists.txt  COPYING_blob.h  config.cpp  main.cpp  menu.cpp  menu_system.cpp  menu_system.h  page.cpp  search.cpp
persiancat-browser-CLI/headers/: config.h  menu.h  page.h  search.h
persiancat-engine/: CMakeLists.txt  backend.c  html-rendering.cpp  html-rendering.h  main.c  renderer.cpp
persiancat-engine/libxml2/include/libxml2/: HTMLparser.c
persiancat-qt/src/: main.cpp  mainwindow.cpp  mainwindow.h
persiancat-qt/ui/: mainwindow.ui
rust-backend/: Cargo.toml
rust-backend/src/: lib.rs
